--- a/index.html
+++ b/index.html
@@ -105,177 +105,5 @@
     
     <div class="search-section">
         <div class="search-box">
-            <input type="text" id="search-input" placeholder="Nama koin (ex: sui, sol, deep)">
-            <button class="add-btn" onclick="addCoin()">Tambah</button>
-        </div>
-        <div id="status" class="status-info">Ready, Bro!</div>
-    </div>
-</div>
-
-<script>
-    let usdToIdr = parseFloat(localStorage.getItem('last_usd_idr')) || 16000; 
-    let prices = { BTC: 0, ETH: 0 };
-    let changes = { BTC: 0, ETH: 0 }; 
-    let watchlist = JSON.parse(localStorage.getItem('kurs_fast_v4')) || [];
-    let lastSource = 'idr';
-    let lastRawValue = "";
-
-    // MAPPING UNTUK COINGECKO ID (Kalo input 'sui' dia cari 'sui')
-    // Coingecko biasanya pake id btc=bitcoin, eth=ethereum
-    const cgMapping = { 'BTC': 'bitcoin', 'ETH': 'ethereum', 'SUI': 'sui', 'SOL': 'solana', 'DEEP': 'deepbook' };
-
-    function handleLogoError(img, sym) {
-        const retry = parseInt(img.getAttribute('data-retry') || "0");
-        const sources = [
-            `https://coinicons-api.vercel.app/api/icon/${sym.toLowerCase()}`,
-            `https://assets.coincap.io/assets/icons/${sym.toLowerCase()}@2x.png`,
-            `https://raw.githubusercontent.com/spothq/cryptocurrency-icons/master/128/color/${sym.toLowerCase()}.png`,
-            `https://cdn-icons-png.flaticon.com/512/1041/1041888.png`
-        ];
-        if (retry < sources.length - 1) {
-            img.setAttribute('data-retry', retry + 1);
-            img.src = sources[retry + 1];
-        }
-    }
-
-    function formatWithCommas(val) {
-        if (!val || val === "0") return "";
-        let parts = val.toString().split(".");
-        parts[0] = parts[0].replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-        return parts.join(".");
-    }
-
-    function handleInput(id) {
-        let el = document.getElementById(id);
-        let raw = el.value.replace(/,/g, '');
-        if (raw === "") {
-            document.querySelectorAll('input[type="text"]').forEach(i => { if(i.id !== 'search-input') i.value = ""; });
-            lastRawValue = ""; return;
-        }
-        lastSource = id; lastRawValue = raw;
-        calculateKurs(id, raw);
-        let cursor = el.selectionStart;
-        let oldLen = el.value.length;
-        el.value = formatWithCommas(raw);
-        let newLen = el.value.length;
-        el.setSelectionRange(cursor + (newLen - oldLen), cursor + (newLen - oldLen));
-    }
-
-    function calculateKurs(source, rawVal) {
-        let val = parseFloat(rawVal) || 0;
-        let baseUsd = 0;
-        if (source === 'idr') baseUsd = val / usdToIdr;
-        else if (source === 'usd') baseUsd = val;
-        else baseUsd = val * (prices[source.toUpperCase()] || 0);
-        
-        const allFields = ['idr', 'usd', 'btc', 'eth', ...watchlist.map(s => s.toLowerCase())];
-        allFields.forEach(f => {
-            if (f !== source) {
-                let targetEl = document.getElementById(f);
-                if (!targetEl) return;
-                let res = (f === 'idr') ? baseUsd * usdToIdr : (f === 'usd') ? baseUsd : baseUsd / (prices[f.toUpperCase()] || 1);
-                if (f === 'idr') targetEl.value = formatWithCommas(Math.round(res).toString());
-                else {
-                    let dec = (f === 'usd') ? 2 : 6;
-                    targetEl.value = formatWithCommas(res.toFixed(dec).replace(/\.?0+$/, ""));
-                }
-            }
-        });
-    }
-
-    async function fetchAllPrices() {
-        document.getElementById('status').innerText = "Syncing with CoinGecko...";
-        try {
-            // 1. Fetch Kurs USD + BTC + ETH + Watchlist sekaligus
-            const ids = ['usd-coin', 'bitcoin', 'ethereum'];
-            watchlist.forEach(s => {
-                let mapped = cgMapping[s.toUpperCase()] || s.toLowerCase();
-                ids.push(mapped);
-            });
-
-            const response = await fetch(`https://api.coingecko.com/api/v3/simple/price?ids=${ids.join(',')}&vs_currencies=usd,idr&include_24hr_change=true`);
-            const data = await response.json();
-
-            // Update USD/IDR
-            if(data['usd-coin']) {
-                usdToIdr = data['usd-coin'].idr;
-                localStorage.setItem('last_usd_idr', usdToIdr);
-                document.getElementById('kurs-live').innerText = `USD/IDR: ${new Intl.NumberFormat('id-ID').format(usdToIdr)}`;
-            }
-
-            // Update Prices Logic
-            const updatePrice = (sym, cgId) => {
-                if(data[cgId]) {
-                    prices[sym] = data[cgId].usd;
-                    changes[sym] = data[cgId].usd_24h_change || 0;
-                }
-            };
-
-            updatePrice('BTC', 'bitcoin');
-            updatePrice('ETH', 'ethereum');
-            watchlist.forEach(s => updatePrice(s.toUpperCase(), cgMapping[s.toUpperCase()] || s.toLowerCase()));
-
-            renderWatchlist();
-            updateFixedUI();
-            if (lastRawValue) calculateKurs(lastSource, lastRawValue);
-            document.getElementById('status').innerText = "Update: " + new Date().toLocaleTimeString();
-        } catch(e) {
-            document.getElementById('status').innerText = "API Limit / Error";
-        }
-    }
-
-    function updateFixedUI() {
-        ['BTC', 'ETH'].forEach(s => {
-            let pEl = document.getElementById(`price-${s.toLowerCase()}`);
-            let cEl = document.getElementById(`change-${s.toLowerCase()}`);
-            if (prices[s] && pEl) {
-                pEl.innerText = "$" + prices[s].toLocaleString();
-                cEl.innerText = (changes[s] >= 0 ? '+' : '') + changes[s].toFixed(2) + '%';
-                cEl.className = 'price-change ' + (changes[s] >= 0 ? 'up' : 'down');
-            }
-        });
-    }
-
-    function renderWatchlist() {
-        let container = document.getElementById('watchlist'); 
-        if (!container) return;
-        container.innerHTML = "";
-        watchlist.forEach(s => {
-            const p = prices[s.toUpperCase()] || 0;
-            const c = changes[s.toUpperCase()] || 0;
-            const id = s.toLowerCase();
-            container.innerHTML += `
-                <div class="coin-row">
-                    <div class="coin-card">
-                        <div class="logo-wrapper">
-                            <img src="https://coinicons-api.vercel.app/api/icon/${id}" onerror="handleLogoError(this, '${id}')">
-                        </div>
-                        <div class="info-group"><label>${s.toUpperCase()}</label><span class="live-price">$${p.toLocaleString()}</span></div>
-                        <div class="input-box"><input type="text" id="${id}" inputmode="decimal" placeholder="0" oninput="handleInput('${id}')"></div>
-                        <span class="price-change ${c >= 0 ? 'up' : 'down'}">${c >= 0 ? '+' : ''}${c.toFixed(2)}%</span>
-                    </div>
-                    <div class="delete-btn-outside" onclick="removeCoin('${s}')">×</div>
-                </div>`;
-        });
-    }
-
-    async function addCoin() {
-        let input = document.getElementById('search-input');
-        let s = input.value.toLowerCase().trim();
-        if (!s || watchlist.includes(s)) return;
-        watchlist.push(s);
-        localStorage.setItem('kurs_fast_v4', JSON.stringify(watchlist));
-        input.value = "";
-        await fetchAllPrices();
-    }
-
-    function removeCoin(s) {
-        watchlist = watchlist.filter(i => i !== s);
-        localStorage.setItem('kurs_fast_v3', JSON.stringify(watchlist));
-        renderWatchlist();
-    }
-
-    window.onload = fetchAllPrices;
-</script>
-</body>
-</html>
+            <input type="text" id="search-input" placeholder="Contoh: solana, sui, ripple">
+            <button class="add-btn" onclick="addCoin()">
